# GeoGame

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md
data/: country.json  country_cn.json  country_en.json  country_ru.json  tr_cn.json  tr_en.json  tr_ru.json
macos/: build_app_sh
save/: config.json
src/: configure.rs  consts.rs  loadconfig.rs  main.rs  process.rs  threadfn.rs  translation.rs  uipart.rs
ui/: about.slint  endgame.slint  game.slint  globals.slint  images.slint  main.slint  mybutton.slint  mywidget.slint  onexit.slint  preplay.slint  settings.slint  translation.slint  welcome.slint  window.slint
windows/: build_app.py
