[package]
name = "geo_game"
version = "0.6.0"
authors = ["Alex <https://github.com/Optimunn>"]
license = "MIT"
edition = "2024"

[profile.release]
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling

[dependencies]
slint = "1.13.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
open = "5.3.2"

[build-dependencies]
slint-build = "1.13.0"
